fix issue on mobile devices, where the footer wasn't shown with address bar

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -14,10 +14,12 @@
     src: url("/assets/fonts/Fira\ Code\ Light\ Nerd\ Font\ Complete.otf");
     font-weight: lighter;
 }
+html,body{
+    height: 100%;
+}
 
 body {
     width: 100%;
-    height: 100%;
     background-color: rgb(44, 44, 44);
     font-family: "Fira Code", monospace;
     text-rendering: optimizeLegibility;
@@ -48,8 +50,8 @@ section{
     flex-direction: column;
     flex-wrap: nowrap;
 
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 section{
     max-width: 520px;
